Logo and footer start
I begining the LOGO and the footer parts

--- a/index.html
+++ b/index.html
@@ -6,16 +6,25 @@
   <meta name="viewport" content="width=device-width">
   <title>HONDA Prelude III</title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
-</head>
+<link rel="stylesheet" href="main.css">
+	</head>
 <body>
-  <footer>
-    <div class="wrapper">
-     <small>©2017 <strong>Awesome Company</strong>, All Rights Reserved</small>
-      <nav class="footer-nav">
-        <a href="#">Back to Top</a>
-        <a href="#">Terms of Use</a>
-        <a href="#">Privacy</a>
-    </div>
+	<header>
+		<div class="logo">
+	<p>HONDA</p>
+		</div>
+
+	</header>
+  <main>
+	
+	</main>
+	<footer>
+		<div class="wrapper_pos">
+			<div class="wrapper">
+			 <small>©2019 <strong>Kukurikriki Company</strong>, All Rights Reserved</small>
+					<a href=#>Vissza az eljére</a>
+			</div>
+		</div>
   </footer>
 </body>
 </html>
