--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>HONDA Prelude III</title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
 <link rel="stylesheet" href="main.css">
+<link href="https://fonts.googleapis.com/css?family=Ramaraja&display=swap" rel="stylesheet">
 	</head>
 <body>
 	<header>
