--- a/index.html
+++ b/index.html
@@ -12,12 +12,37 @@
 <body>
 	<header>
 		<div class="logo">
-	<p>HONDA</p>
+	  	<h1>HONDA</h1>
+			<h2>Prelude</h2>
 		</div>
-
 	</header>
   <main>
-	
+		<div class="main_left">
+			<p>Left dfffdf dgfd  gsgsg gsgjjgifjfg fgdafo gaofg haofh o</p>
+		</div>
+		<div class="main_midle">
+			
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vulputate turpis turpis, sit amet ullamcorper felis lacinia et. Vestibulum lectus eros, bibendum vitae scelerisque nec, condimentum vitae mauris. Sed diam risus, condimentum a feugiat sit amet, pulvinar at nibh. Cras sed erat vehicula ex posuere vestibulum. Morbi a venenatis diam. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Fusce quis metus consectetur, mollis lectus at, laoreet urna. Donec tristique feugiat tincidunt. Aliquam venenatis sapien sit amet turpis porta, at sagittis arcu vestibulum. Phasellus faucibus diam et accumsan semper. Quisque augue mauris, efficitur at justo in, viverra aliquam neque. Praesent ultricies mauris sem, in viverra dui eleifend eget. Aliquam erat volutpat. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Integer commodo orci tortor, ut laoreet augue fermentum vitae.</p>
+				<p>
+					Phasellus at viverra augue. In sagittis lacus vel nisl convallis, id commodo dui pellentesque. Nullam eu vehicula dui. Proin consectetur volutpat semper. Cras semper et mi ac aliquet. Mauris eget nunc finibus, imperdiet tortor ac, congue nulla. Ut in lacus metus.
+				</p>
+				<p>
+					Curabitur lobortis tellus at venenatis mollis. Donec sem turpis, luctus ac justo a, mollis molestie augue. Proin diam purus, porttitor id ornare vel, rhoncus at lorem. In urna metus, gravida nec enim quis, ultricies posuere risus. Duis scelerisque, magna vel convallis eleifend, enim neque egestas arcu, at blandit urna massa id nisl. Nulla vitae urna nibh. Vestibulum et massa rutrum, auctor sem mollis, sagittis velit. Duis laoreet consectetur ligula, non euismod elit tristique a. Proin iaculis pulvinar purus. Duis venenatis, lectus sed sodales congue, ex lacus condimentum ex, vel interdum risus tortor eu diam.
+				</p>
+				<p>
+					Curabitur lobortis tellus at venenatis mollis. Donec sem turpis, luctus ac justo a, mollis molestie augue. Proin diam purus, porttitor id ornare vel, rhoncus at lorem. In urna metus, gravida nec enim quis, ultricies posuere risus. Duis scelerisque, magna vel convallis eleifend, enim neque egestas arcu, at blandit urna massa id nisl. Nulla vitae urna nibh. Vestibulum et massa rutrum, auctor sem mollis, sagittis velit. Duis laoreet consectetur ligula, non euismod elit tristique a. Proin iaculis pulvinar purus. Duis venenatis, lectus sed sodales congue, ex lacus condimentum ex, vel interdum risus tortor eu diam.
+				</p>
+						<p>
+					Curabitur lobortis tellus at venenatis mollis. Donec sem turpis, luctus ac justo a, mollis molestie augue. Proin diam purus, porttitor id ornare vel, rhoncus at lorem. In urna metus, gravida nec enim quis, ultricies posuere risus. Duis scelerisque, magna vel convallis eleifend, enim neque egestas arcu, at blandit urna massa id nisl. Nulla vitae urna nibh. Vestibulum et massa rutrum, auctor sem mollis, sagittis velit. Duis laoreet consectetur ligula, non euismod elit tristique a. Proin iaculis pulvinar purus. Duis venenatis, lectus sed sodales congue, ex lacus condimentum ex, vel interdum risus tortor eu diam.
+				</p>
+				<p>
+					Curabitur lobortis tellus at venenatis mollis. Donec sem turpis, luctus ac justo a, mollis molestie augue. Proin diam purus, porttitor id ornare vel, rhoncus at lorem. In urna metus, gravida nec enim quis, ultricies posuere risus. Duis scelerisque, magna vel convallis eleifend, enim neque egestas arcu, at blandit urna massa id nisl. Nulla vitae urna nibh. Vestibulum et massa rutrum, auctor sem mollis, sagittis velit. Duis laoreet consectetur ligula, non euismod elit tristique a. Proin iaculis pulvinar purus. Duis venenatis, lectus sed sodales congue, ex lacus condimentum ex, vel interdum risus tortor eu diam.
+				</p>
+		</div>
+		<div class="main_right">
+			<p>right dgfhdgfhdgfh</p>
+		</div>
 	</main>
 	<footer>
 		<div class="wrapper_pos">
