Head and picture added.

--- a/index.html
+++ b/index.html
@@ -13,20 +13,45 @@
 	<header>
 		<div class="logo">
 	  	<h1>HONDA</h1>
-			<h2>Prelude</h2>
+			<div id="kep_1">
+				<img src="assets/v%C3%A1gott%20szemb%C5%91l.jpg" alt="prelude szemböl">
+			</div>
+			<div id="prelude_sziluett">
+				<img src="assets/sziluett_car.jpg" alt="logo prelude sziluett">
+			</div> 
+			<div id="prelude_logo">
+				<img src="assets/Prelude_logo.jpg" alt="logo prelude">
+			</div> 
+			<div id="H_logo">
+				<img src="assets/H_logo.jpg" alt="logo prelude">
+			</div> 
 		</div>
 	</header>
-  <main>
+  <div class="main">
 		<div class="main_left">
-			<p>Left dfffdf dgfd  gsgsg gsgjjgifjfg fgdafo gaofg haofh o</p>
+			<div class="oldal_kep keret2">
+				<img src="assets/prelude3_filtered.jpg" alt="prelude">
+			</div> 
+		  <div class="oldal_kep keret2">
+				<img src="assets/secbifesndowhauxy0hp.webp" alt="prelude">
+			</div> 
 		</div>
 		<div class="main_midle">
+			<div class="picture_1 keret">
+				<img src="assets/zejegreo6ump0knrgjwg.gif" alt="prelude">	
+			</div>
 			
+			<div>
+				A mindig is egyedi formával rendelkező, rengeteg technikai újdonságot tartalmazó Honda coupe. Példának okáért a 4 kerék kormányzást is ehhez a modellhez fejlesztették.
+			</div>	
+			<p>
+				A harmadik generációs Prelude a nagy klasszikus, utoljára szerepel a felnyíló első lámpákkal. Kabrióként is megvásárolható volt. Motorjai 2 literesek voltak, azonban teljesítményük és felépítésük is eltért. Az egyik motor 12 szelepes 109 lóerős, a másik pedig 16 szelepes DOHC 140 lóerős volt. Tervezésekor figyelembe vették, hogy akkor ez legyen a világ legalacsonyabb motorháztető vonalú autója, ezzel is javítva a kilátáson, valamint az üzemanyag felhasználáson is. Belső térből való körbetekinthetősége 326 fokos volt, ebből adódóan sokan "baby nsx"-nek becézték, nem beszélve a sok egyezésről, mint például a hátsó lámpák kialakítása is az NSX-et idézte. Fontos megjegyezni, hogy a harmadik generációs Prelude volt az első olyan autó mely 4WS azaz négykerék- kormányzással volt felszerelve. A 4WS-nek köszönhetően 1988-ban egy szlalom versenyen elverte az összes Lamborghinit, Ferrarit,  és Porschét.</p>
 				<p>
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vulputate turpis turpis, sit amet ullamcorper felis lacinia et. Vestibulum lectus eros, bibendum vitae scelerisque nec, condimentum vitae mauris. Sed diam risus, condimentum a feugiat sit amet, pulvinar at nibh. Cras sed erat vehicula ex posuere vestibulum. Morbi a venenatis diam. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Fusce quis metus consectetur, mollis lectus at, laoreet urna. Donec tristique feugiat tincidunt. Aliquam venenatis sapien sit amet turpis porta, at sagittis arcu vestibulum. Phasellus faucibus diam et accumsan semper. Quisque augue mauris, efficitur at justo in, viverra aliquam neque. Praesent ultricies mauris sem, in viverra dui eleifend eget. Aliquam erat volutpat. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Integer commodo orci tortor, ut laoreet augue fermentum vitae.</p>
-				<p>
-					Phasellus at viverra augue. In sagittis lacus vel nisl convallis, id commodo dui pellentesque. Nullam eu vehicula dui. Proin consectetur volutpat semper. Cras semper et mi ac aliquet. Mauris eget nunc finibus, imperdiet tortor ac, congue nulla. Ut in lacus metus.
+					Japánban Prelude INX ként DOHC motorrral volt kapható. Itt lényegi különbség még, hogy nem felnyíló lámpát, hanem az Accord jellegű csík lámpát kapta meg:
 				</p>
+				<div class="picture_1 keret">
+					<img src="assets/wallpapers_honda_prelude_INX_1989_1.jpg">
+				</div>
 				<p>
 					Curabitur lobortis tellus at venenatis mollis. Donec sem turpis, luctus ac justo a, mollis molestie augue. Proin diam purus, porttitor id ornare vel, rhoncus at lorem. In urna metus, gravida nec enim quis, ultricies posuere risus. Duis scelerisque, magna vel convallis eleifend, enim neque egestas arcu, at blandit urna massa id nisl. Nulla vitae urna nibh. Vestibulum et massa rutrum, auctor sem mollis, sagittis velit. Duis laoreet consectetur ligula, non euismod elit tristique a. Proin iaculis pulvinar purus. Duis venenatis, lectus sed sodales congue, ex lacus condimentum ex, vel interdum risus tortor eu diam.
 				</p>
@@ -43,7 +68,7 @@
 		<div class="main_right">
 			<p>right dgfhdgfhdgfh</p>
 		</div>
-	</main>
+	</div>
 	<footer>
 		<div class="wrapper_pos">
 			<div class="wrapper">
