Add side pictures.

--- a/index.html
+++ b/index.html
@@ -34,6 +34,21 @@
 			</div> 
 		  <div class="oldal_kep keret2">
 				<img src="assets/secbifesndowhauxy0hp.webp" alt="prelude">
+			</div>
+					  <div class="oldal_kep keret2">
+				<img src="assets/1407274536_by_Folley96.jpg" alt="prelude">
+			</div>
+			<div class="oldal_kep keret2">
+				<img src="assets/1988-honda-prelude-s-automatic-38k-low-original-miles-4-cylinder-no-reserve-1.jpg" alt="prelude">
+			</div>
+			<div class="oldal_kep keret2">
+				<img src="assets/536_9926.jpg" alt="prelude">
+			</div>
+			<div class="oldal_kep keret2">
+				<img src="assets/199_3898.jpg" alt="prelude">
+			</div>
+			<div class="oldal_kep keret2">
+				<img src="assets/537_4708.jpg" alt="prelude">
 			</div> 
 		</div>
 		<div class="main_midle">
@@ -52,21 +67,30 @@
 				<div class="picture_1 keret">
 					<img src="assets/wallpapers_honda_prelude_INX_1989_1.jpg">
 				</div>
-				<p>
-					Curabitur lobortis tellus at venenatis mollis. Donec sem turpis, luctus ac justo a, mollis molestie augue. Proin diam purus, porttitor id ornare vel, rhoncus at lorem. In urna metus, gravida nec enim quis, ultricies posuere risus. Duis scelerisque, magna vel convallis eleifend, enim neque egestas arcu, at blandit urna massa id nisl. Nulla vitae urna nibh. Vestibulum et massa rutrum, auctor sem mollis, sagittis velit. Duis laoreet consectetur ligula, non euismod elit tristique a. Proin iaculis pulvinar purus. Duis venenatis, lectus sed sodales congue, ex lacus condimentum ex, vel interdum risus tortor eu diam.
-				</p>
-				<p>
-					Curabitur lobortis tellus at venenatis mollis. Donec sem turpis, luctus ac justo a, mollis molestie augue. Proin diam purus, porttitor id ornare vel, rhoncus at lorem. In urna metus, gravida nec enim quis, ultricies posuere risus. Duis scelerisque, magna vel convallis eleifend, enim neque egestas arcu, at blandit urna massa id nisl. Nulla vitae urna nibh. Vestibulum et massa rutrum, auctor sem mollis, sagittis velit. Duis laoreet consectetur ligula, non euismod elit tristique a. Proin iaculis pulvinar purus. Duis venenatis, lectus sed sodales congue, ex lacus condimentum ex, vel interdum risus tortor eu diam.
-				</p>
-						<p>
-					Curabitur lobortis tellus at venenatis mollis. Donec sem turpis, luctus ac justo a, mollis molestie augue. Proin diam purus, porttitor id ornare vel, rhoncus at lorem. In urna metus, gravida nec enim quis, ultricies posuere risus. Duis scelerisque, magna vel convallis eleifend, enim neque egestas arcu, at blandit urna massa id nisl. Nulla vitae urna nibh. Vestibulum et massa rutrum, auctor sem mollis, sagittis velit. Duis laoreet consectetur ligula, non euismod elit tristique a. Proin iaculis pulvinar purus. Duis venenatis, lectus sed sodales congue, ex lacus condimentum ex, vel interdum risus tortor eu diam.
-				</p>
-				<p>
-					Curabitur lobortis tellus at venenatis mollis. Donec sem turpis, luctus ac justo a, mollis molestie augue. Proin diam purus, porttitor id ornare vel, rhoncus at lorem. In urna metus, gravida nec enim quis, ultricies posuere risus. Duis scelerisque, magna vel convallis eleifend, enim neque egestas arcu, at blandit urna massa id nisl. Nulla vitae urna nibh. Vestibulum et massa rutrum, auctor sem mollis, sagittis velit. Duis laoreet consectetur ligula, non euismod elit tristique a. Proin iaculis pulvinar purus. Duis venenatis, lectus sed sodales congue, ex lacus condimentum ex, vel interdum risus tortor eu diam.
-				</p>
+
 		</div>
 		<div class="main_right">
-			<p>right dgfhdgfhdgfh</p>
+			<div class="oldal_kep keret2">
+				<img src="assets/1991_honda_prelude_15462781238764daCar4-940x705.jpg" alt="prelude">
+			</div> 
+			<div class="oldal_kep keret2">
+				<img src="assets/message-editor_1543092330239-pb5.jpg" alt="prelude">
+			</div>
+			<div class="oldal_kep keret2">
+				<img src="assets/91_7431.jpg" alt="prelude">
+			</div> 
+			<div class="oldal_kep keret2">
+				<img src="assets/pictures_honda_prelude_1989_1.jpg" alt="prelude">
+			</div> 
+			<div class="oldal_kep keret2">
+				<img src="assets/69060219_108299280376322_6931050061918168055_n.jpg" alt="prelude">
+			</div>
+			<div class="oldal_kep keret2">
+				<img src="assets/610_1879.jpg" alt="prelude">
+			</div>
+			<div class="oldal_kep keret2">
+				<img src="assets/202_5277.jpg" alt="prelude">
+			</div> 
 		</div>
 	</div>
 	<footer>
