finised the site.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
 <link rel="stylesheet" href="main.css">
 <link href="https://fonts.googleapis.com/css?family=Ramaraja&display=swap" rel="stylesheet">
-	</head>
+<link href="https://fonts.googleapis.com/css?family=Oxygen&display=swap" rel="stylesheet">	</head>
 <body>
 	<header>
 		<div class="logo">
@@ -36,7 +36,7 @@
 				<img src="assets/secbifesndowhauxy0hp.webp" alt="prelude">
 			</div>
 					  <div class="oldal_kep keret2">
-				<img src="assets/1407274536_by_Folley96.jpg" alt="prelude">
+				<img src="assets/200_7713.jpg" alt="prelude">
 			</div>
 			<div class="oldal_kep keret2">
 				<img src="assets/1988-honda-prelude-s-automatic-38k-low-original-miles-4-cylinder-no-reserve-1.jpg" alt="prelude">
@@ -56,9 +56,12 @@
 				<img src="assets/zejegreo6ump0knrgjwg.gif" alt="prelude">	
 			</div>
 			
-			<div>
-				A mindig is egyedi formával rendelkező, rengeteg technikai újdonságot tartalmazó Honda coupe. Példának okáért a 4 kerék kormányzást is ehhez a modellhez fejlesztették.
-			</div>	
+			<div class="head">
+				A mindig is egyedi formával rendelkező, rengeteg technikai újdonságot tartalmazó Honda coupe. 
+			</div>
+			<p>
+			  Vitathatatlanul az 1988-ban debütáló Mk3 sikerült a legfeszesebbre, a nyolcvanas évek végén oly divatos bukólámpa megmaradt, és kívül-belül még sportosabbra vették a figurát a Hondánál. A négysebességes automatával és ötgangos manuális váltóval rendelhető modell legerősebb motorja 150 lovas volt, ráadásul négykerék-kormányzás is újdonságnak számított. Példának okáért a 4 kerék kormányzást is ehhez a modellhez fejlesztették. Ezt azért is fontos megemlíteni, mert a szlalompályákon jóval keményebb járgányokat utasított maga mögé. Sajnos a történet itt sem ért teljesen boldog véget, mivel az 1990-ben megjelent NSX már a második komoly ellenfele volt Prelude-nek. Innentől még nehezebbé vált a modell élete.
+			</p>
 			<p>
 				A harmadik generációs Prelude a nagy klasszikus, utoljára szerepel a felnyíló első lámpákkal. Kabrióként is megvásárolható volt. Motorjai 2 literesek voltak, azonban teljesítményük és felépítésük is eltért. Az egyik motor 12 szelepes 109 lóerős, a másik pedig 16 szelepes DOHC 140 lóerős volt. Tervezésekor figyelembe vették, hogy akkor ez legyen a világ legalacsonyabb motorháztető vonalú autója, ezzel is javítva a kilátáson, valamint az üzemanyag felhasználáson is. Belső térből való körbetekinthetősége 326 fokos volt, ebből adódóan sokan "baby nsx"-nek becézték, nem beszélve a sok egyezésről, mint például a hátsó lámpák kialakítása is az NSX-et idézte. Fontos megjegyezni, hogy a harmadik generációs Prelude volt az első olyan autó mely 4WS azaz négykerék- kormányzással volt felszerelve. A 4WS-nek köszönhetően 1988-ban egy szlalom versenyen elverte az összes Lamborghinit, Ferrarit,  és Porschét.</p>
 				<p>
@@ -67,7 +70,73 @@
 				<div class="picture_1 keret">
 					<img src="assets/wallpapers_honda_prelude_INX_1989_1.jpg">
 				</div>
+				<div class="adatok">
+					<div class="caption">Technikai adatok</div>
+					<table>
 
+					<tr>
+						<td> </td>
+						<td>2.0</td>
+						<td>2.0</td>
+					</tr>
+					<tr>
+						<td>Motor</td>
+						<td>4 hengeres SOHC 12 szelepes Karburátoros</td>
+						<td>4 hengeres DOHC 16 szelepes PGM-FI</td>
+					</tr>
+					<tr>
+						<td>Kapacitás</td>
+						<td>1944cc</td>
+						<td>1958cc</td>
+					</tr>
+					<tr>
+						<td>Sűrítési arány</td>
+						<td>9.1:1</td>
+						<td>9.4:1</td>
+					</tr>	
+					<tr>
+						<td>Teljesítmény</td>
+						<td>80kw / 109Le / 5800rpm</td>
+						<td>103kw / 140Le / 6000rpm</td>
+					</tr>
+					<tr>
+						<td>Maximális Nyomaték</td>
+						<td>154Nm / 4000rpm</td>
+						<td>175Nm / 4500rpm</td>
+					</tr>
+					<tr>
+						<td>Önsúly</td>
+						<td>1110kg</td>
+						<td>1155kg</td>
+					</tr>	
+					<tr>
+						<td>Legnagyobb sebesség</td>
+						<td>183km/h</td>
+						<td>205km/h</td>
+					</tr>
+					<tr>
+						<td>Gyorsulás 0-100 km / h</td>
+						<td>10.4s</td>
+						<td>8.6s</td>
+					</tr>							
+					<tr>
+						<td>Hossz / szélesség / magasság</td>
+						<td>4460 / 1695 / 1295 mm</td>
+						<td>4460 / 1695 / 1295 mm</td>
+					</tr>
+					<tr>
+						<td>Gyári gumiabroncsok</td>
+						<td>185/70R13</td>
+						<td>195/60R14</td>
+					</tr>							
+						
+					</table>	
+			  </div>
+
+			<div class="picture_1 keret">
+				<img src="assets/1407274536_by_Folley96.jpg" alt="prelude">
+			</div>
+		</div>
 		</div>
 		<div class="main_right">
 			<div class="oldal_kep keret2">
@@ -97,7 +166,7 @@
 		<div class="wrapper_pos">
 			<div class="wrapper">
 			 <small>©2019 <strong>Kukurikriki Company</strong>, All Rights Reserved</small>
-					<a href=#>Vissza az eljére</a>
+					
 			</div>
 		</div>
   </footer>
