--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="hu">
 <head>
   <meta name="Footer" content="HONDA Prelude III">
   <meta charset="utf-8">
@@ -68,7 +68,7 @@
 					Japánban Prelude INX ként DOHC motorrral volt kapható. Itt lényegi különbség még, hogy nem felnyíló lámpát, hanem az Accord jellegű csík lámpát kapta meg:
 				</p>
 				<div class="picture_1 keret">
-					<img src="assets/wallpapers_honda_prelude_INX_1989_1.jpg">
+					<img src="assets/wallpapers_honda_prelude_INX_1989_1.jpg" alt="prelude">
 				</div>
 				<div class="adatok">
 					<div class="caption">Technikai adatok</div>
@@ -161,7 +161,6 @@
 				<img src="assets/202_5277.jpg" alt="prelude">
 			</div> 
 		</div>
-	</div>
 	<footer>
 		<div class="wrapper_pos">
 			<div class="wrapper">
